--- a/StepMotorControllerUIPart/StepMotorControllerUIPart.csproj
+++ b/StepMotorControllerUIPart/StepMotorControllerUIPart.csproj
@@ -53,19 +53,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helper\ConfigReader.cs" />
-    <Compile Include="Logic\MesuresLogic.cs" />
+    <Compile Include="Logic\GeneralLogic.cs" />
     <Compile Include="UsedTypes\AdcArduinoParams.cs" />
     <Compile Include="UsedTypes\Adress.cs" />
     <Compile Include="UsedTypes\CalculatedData.cs" />
     <Compile Include="UsedTypes\Constans.cs" />
     <Compile Include="UsedTypes\Diaphragms.cs" />
     <Compile Include="UsedTypes\MesureParameters.cs" />
-    <Compile Include="UsedTypes\Mesure.cs" />
+    <Compile Include="UsedTypes\MesureOld.cs" />
     <Compile Include="Helper\MathHelper.cs" />
     <Compile Include="Helper\ThreadSafeRandom.cs" />
     <Compile Include="SerialPortClasses\ModBus.cs" />
     <Compile Include="SerialPortClasses\Arduino.cs" />
-    <Compile Include="UsedTypes\Mesure_My.cs" />
+    <Compile Include="UsedTypes\Mesure.cs" />
     <Compile Include="UsedTypes\Resistors.cs" />
     <Compile Include="Views\GeneralFrame.cs">
       <SubType>Form</SubType>
