--- a/StepMotorControllerUIPart/StepMotorControllerUIPart.csproj
+++ b/StepMotorControllerUIPart/StepMotorControllerUIPart.csproj
@@ -55,13 +55,15 @@
     <Compile Include="Helper\ConfigReader.cs" />
     <Compile Include="Logic\GeneralLogic.cs" />
     <Compile Include="Logic\GraphLogic.cs" />
-    <Compile Include="UsedTypes\AdcArduinoParams.cs" />
+    <Compile Include="SerialPortClasses\test\ArduinoTest.cs" />
+    <Compile Include="SerialPortClasses\IArduino.cs" />
+    <Compile Include="SerialPortClasses\IModBus.cs" />
+    <Compile Include="SerialPortClasses\test\ModBusTest.cs" />
+    <Compile Include="UsedTypes\ConnectionParams.cs" />
     <Compile Include="UsedTypes\Adress.cs" />
-    <Compile Include="UsedTypes\CalculatedData.cs" />
     <Compile Include="UsedTypes\Constans.cs" />
     <Compile Include="UsedTypes\Diaphragms.cs" />
-    <Compile Include="UsedTypes\GraphData.cs" />
-    <Compile Include="UsedTypes\MesureParameters.cs" />
+    <Compile Include="UsedTypes\MesureParams.cs" />
     <Compile Include="UsedTypes\Mesure.cs" />
     <Compile Include="Helper\MathHelper.cs" />
     <Compile Include="Helper\ThreadSafeRandom.cs" />
