--- a/StepMotorControllerUIPart/Properties/Settings.settings
+++ b/StepMotorControllerUIPart/Properties/Settings.settings
@@ -2,22 +2,22 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="StepMotorControllerUIPart.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="SecondaryEmisionMonitorAdcNumber" Type="System.Int32" Scope="User">
+    <Setting Name="SecondaryEmisionMonitorAdcNumber" Type="System.Byte" Scope="User">
       <Value Profile="(Default)">2</Value>
     </Setting>
-    <Setting Name="SecondaryEmisionMonitorChannelNumber" Type="System.Int32" Scope="User">
+    <Setting Name="SecondaryEmisionMonitorChannelNumber" Type="System.Byte" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
-    <Setting Name="Channel1AdcNumber" Type="System.Int32" Scope="User">
+    <Setting Name="Channel1AdcNumber" Type="System.Byte" Scope="User">
       <Value Profile="(Default)">2</Value>
     </Setting>
-    <Setting Name="Channel1ChannelNumber" Type="System.Int32" Scope="User">
+    <Setting Name="Channel1ChannelNumber" Type="System.Byte" Scope="User">
       <Value Profile="(Default)">2</Value>
     </Setting>
-    <Setting Name="Channel2AdcNumber" Type="System.Int32" Scope="User">
+    <Setting Name="Channel2AdcNumber" Type="System.Byte" Scope="User">
       <Value Profile="(Default)">2</Value>
     </Setting>
-    <Setting Name="Channel2ChannelNumber" Type="System.Int32" Scope="User">
+    <Setting Name="Channel2ChannelNumber" Type="System.Byte" Scope="User">
       <Value Profile="(Default)">3</Value>
     </Setting>
     <Setting Name="AKONCOMPort" Type="System.String" Scope="User">
@@ -25,6 +25,15 @@
     </Setting>
     <Setting Name="ArduinoCOMPort" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="StepsCount" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">10</Value>
+    </Setting>
+    <Setting Name="MesuresPerStep" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">25</Value>
+    </Setting>
+    <Setting Name="DelayBeforeStep" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">2</Value>
     </Setting>
   </Settings>
 </SettingsFile>
