--- a/StepMotorControllerUIPart/StepMotorControllerUIPart.csproj
+++ b/StepMotorControllerUIPart/StepMotorControllerUIPart.csproj
@@ -78,6 +78,7 @@
     <Compile Include="UsedTypes\Adress.cs" />
     <Compile Include="UsedTypes\Constans.cs" />
     <Compile Include="UsedTypes\Diaphragms.cs" />
+    <Compile Include="UsedTypes\Energy.cs" />
     <Compile Include="UsedTypes\MesureParams.cs" />
     <Compile Include="UsedTypes\Mesure.cs" />
     <Compile Include="Helper\MathHelper.cs" />
